tests/snapshots/main__test_rpath__change_dylib_id-2.snap
---
source: tests/test_rpath.rs
expression: changed_macho.name
---
Some(
    "very_very_very_very_very_very_very_longid.dylib",
)
