tests/snapshots/main__test_rpath__change_dylib_name-2.snap
---
source: tests/test_rpath.rs
expression: changed_macho.libs
---
[
    "self",
    "very_very_very_very_very_very_very_longid",
]
