tests/snapshots/main__test_rpath__rpath_add-2.snap
---
source: tests/test_rpath.rs
expression: changed_macho.rpaths
---
[
    "path_graf",
    "abababababababababababaabbababababababababab",
]
