tests/snapshots/main__test_rpath__rpath_change-2.snap
---
source: tests/test_rpath.rs
expression: changed_macho.rpaths
---
[
    "path_graf_path_graf_path_graf_path_graf",
]
